--- a/Project/Fall2020_CSC403_Project/Fall2020_CSC403_Project.csproj
+++ b/Project/Fall2020_CSC403_Project/Fall2020_CSC403_Project.csproj
@@ -52,28 +52,37 @@
     <Compile Include="FrmBattle.Designer.cs">
       <DependentUpon>FrmBattle.cs</DependentUpon>
     </Compile>
-    <Compile Include="FrmLevel2.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FrmLevel2.Designer.cs">
-      <DependentUpon>FrmLevel2.cs</DependentUpon>
-    </Compile>
     <Compile Include="FrmLevel1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FrmLevel1.Designer.cs">
       <DependentUpon>FrmLevel1.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmLevel2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmLevel2.Designer.cs">
+      <DependentUpon>FrmLevel2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmLevel3.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmLevel3.Designer.cs">
+      <DependentUpon>FrmLevel3.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FrmBattle.resx">
       <DependentUpon>FrmBattle.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FrmLevel1.resx">
+      <DependentUpon>FrmLevel1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmLevel2.resx">
       <DependentUpon>FrmLevel2.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FrmLevel1.resx">
-      <DependentUpon>FrmLevel1.cs</DependentUpon>
+    <EmbeddedResource Include="FrmLevel3.resx">
+      <DependentUpon>FrmLevel3.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
