Added semi-working class buttons

--- a/Project/Fall2020_CSC403_Project/Fall2020_CSC403_Project.csproj
+++ b/Project/Fall2020_CSC403_Project/Fall2020_CSC403_Project.csproj
@@ -47,6 +47,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FmClasses.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FmClasses.Designer.cs">
+      <DependentUpon>FmClasses.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmBattle.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -61,6 +67,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="FmClasses.resx">
+      <DependentUpon>FmClasses.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmBattle.resx">
       <DependentUpon>FrmBattle.cs</DependentUpon>
     </EmbeddedResource>
