Lots of Art changes, and final boss changes

--- a/Project/Fall2020_CSC403_Project/Fall2020_CSC403_Project.csproj
+++ b/Project/Fall2020_CSC403_Project/Fall2020_CSC403_Project.csproj
@@ -379,5 +379,8 @@
   <ItemGroup>
     <None Include="Resources\Dark_Depths.wav" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Door_Ver2.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
