--- a/Project/Fall2020_CSC403_Project/Fall2020_CSC403_Project.csproj
+++ b/Project/Fall2020_CSC403_Project/Fall2020_CSC403_Project.csproj
@@ -398,5 +398,11 @@
   <ItemGroup>
     <None Include="Resources\Dark_Depths.wav" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Congrat.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Pause.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
